@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=5
-PATCH_LEVEL=8
+PATCH_LEVEL=9
 MY_PATCH_LEVEL=
 
